Fixed footer nav spacing.

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -5,7 +5,7 @@
 
 .main {
   @include span-columns(12);
-  margin-top: $nav-height;
+  margin: $nav-height 0;
 }
 
 article {
